--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^19.1.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
+    "laravel-echo": "^2.0.2",
+    "pusher-js": "^8.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
